--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,5 +157,8 @@
         <item>@drawable/tv_poster_grey_anatomy</item>
         <item>@drawable/tv_poster_hanna</item>
     </integer-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="movie_s_image">Movie\'s image</string>
 
 </resources>
