--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,7 +132,7 @@
         <item>50m</item>
     </string-array>
 
-    <string-array name="list_tv_score">
+    <integer-array name="list_tv_score">
         <item>66</item>
         <item>76</item>
         <item>81</item>
@@ -143,7 +143,7 @@
         <item>75</item>
         <item>82</item>
         <item>75</item>
-    </string-array>
+    </integer-array>
 
     <integer-array name="list_tv_drawable">
         <item>@drawable/tv_poster_arrow</item>
@@ -160,5 +160,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="movie_s_image">Movie\'s image</string>
+    <string name="overview">Overview :</string>
+    <string name="share">Share</string>
 
 </resources>
