update deprecation code (viewpager -> viewpager2)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="movie_s_image">Movie\'s image</string>
     <string name="overview">Overview :</string>
     <string name="share">Share</string>
+    <string name="movie">Movie</string>
+    <string name="tv_show">Tv Show</string>
 
 </resources>
