--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="share">Share</string>
     <string name="movie">Movie</string>
     <string name="tv_show">Tv Show</string>
+    <string name="no_internet_connection">No Internet Connection</string>
 
 </resources>
