--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="runtime_text_for_condition_1">%1$d Hour %2$d Minutes</string>
     <string name="runtime_text_for_condition_2">%1$d Minutes</string>
     <string name="refresh">Refresh</string>
+    <string name="you_don_t_have_favourite">You Don\'t Have Favourite</string>
 </resources>
