--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="runtime_text_for_condition_2">%1$d Minutes</string>
     <string name="refresh">Refresh</string>
     <string name="you_don_t_have_favourite">You Don\'t Have Favourite</string>
+    <string name="button_to_add_or_remove_item_from_favourite">Button to add or remove item from favourite</string>
 </resources>
